src/test/deca/context/valid/created/decl_var/declaration3.deca
// Description:
//    Programme minimaliste utilisant une affectation.
//
//  Resultats:
//  OK
//
// Historique:
//    cree le 09/01/2020

{
    float x = 0;
}
