src/test/deca/context/invalid/created/affectation/affectation1.deca
// Description:
//    Programme minimaliste utilisant une affectation.
//
// Resultats:
//    Ligne 12 : identifier not defined

//
// Historique:
//    cree le 09/01/2020

{
    int ;
}
